--- a/5.6/index.html
+++ b/5.6/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>우리가족</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16"  href="/websiteplanet.com-favicons/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
     <script src="https://kit.fontawesome.com/29cab44a19.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Roboto+Mono:ital,wght@0,400;0,665;0,700;1,400;1,700&family=Square+Peg&display=swap');
+      </style>
 </head>
 <body>
     <!-- -----------------------헤더시작 --------------------------->
@@ -22,11 +29,11 @@
                     </div>
                     </a>
                     
-                    <a href="#"> <div class="menu-item">가족사진
+                    <a href="#"> <div class="menu-item">(준비중)
                         <i class="fa-solid fa-camera"></i>
                     </div></a>
                     
-                    <a href="#"><div class="menu-item">여행지
+                    <a href="#"><div class="menu-item">(준비중)
                         <i class="fa-solid fa-car"></i>
                     </div></a>
                  <a href="/index.html"><div class="menu-item">메인홈페이지</div></a>
@@ -45,19 +52,19 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="/쓰고있는사진/m22.jpg" style="width: 100%">
-      <div class="text">Caption Text</div>
+      <div class="text"></div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
       <img src="/쓰고있는사진/m1.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <div class="text"></div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
       <img src="/쓰고있는사진/m3.jpg" style="width: 100%">
-      <div class="text">Caption Three</div>
+      <div class="text"></div>
     </div>
   
  
