--- a/5.6/가족소개.html
+++ b/5.6/가족소개.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>우리가족을소개합니다</title>
     <link rel="stylesheet" href="/가족소개.css">
+    <link rel="icon" type="image/png" sizes="16x16"  href="/websiteplanet.com-favicons/websiteplanet.com-favicons (1)/favicons/가족페이지.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://kit.fontawesome.com/29cab44a19.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Pen+Script&family=Roboto+Mono:ital,wght@0,400;0,665;0,700;1,400&family=Square+Peg&display=swap');
+        </style>
 </head>
 <body>
     <!-- -----------------------헤더시작 --------------------------->
@@ -18,7 +24,7 @@
                 </div>
                 <div class="menu clearfix">
                     
-                    <a href="family.html">
+                    <a href="/dad.html">
                         <div class="menu-item">아빠
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -31,7 +37,7 @@
                     <a href="/sister.html"><div class="menu-item">누나
                         <i class="fa-solid fa-heart"></i></div></a>
 
-                        <a href="/"><div class="menu-item">진한
+                        <a href="/진한.html"><div class="menu-item">진한
                             <i class="fa-solid fa-heart"></i></div></a>
 
                             <a href="/까미.html"><div class="menu-item">까미
@@ -45,11 +51,15 @@
             </div>
         </div>
     </div>
+<!-- 헤더끝-->
 
-    <h1 class="ff_text">우리 가족</h1>
+
+<!-- 프로필이미지 -->
+    <div class="ff_text">
+        Best Family</div>
     <div class="ff">
         <div class="box" style="background: #BDBDBD;">
-            <a href="family.html"><img class="profile" src="/프로필사진/아빠사진4.jpg"></a>
+            <a href="/dad.html"><img class="profile" src="/프로필사진/아빠사진4.jpg"></a>
         </div>
 
         <div class="box" style="background: #BDBDBD;">
@@ -60,10 +70,11 @@
             <a href="sister.html"><img class="profile" src="/쓰고있는사진/누나.jpg"></a></div>
 
         <div class="box" style="background: #BDBDBD;">
-            <a href="#"><img class="profile" src="/쓰고있는사진/쓰는것.jpg"></a>
+            <a href="/진한.html"><img class="profile" src="/쓰고있는사진/쓰는것.jpg"></a>
         </div>
 
         <div class="box" style="background: #BDBDBD;">
             <a href="/까미.html"><img class="profile" src="/쓰고있는사진/RarRRR.jpg"></a>
         </div>
     </div>
+<!-- 프로필이미지 -->
