--- a/5.6/까미.html
+++ b/5.6/까미.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>우리까미</title>
    <link rel="stylesheet" href="/까미.css">
+   <link rel="icon" type="image/png" sizes="16x16"  href="/websiteplanet.com-favicons/websiteplanet.com-favicons (1)/favicons/까미꺼.png">
+   <meta name="msapplication-TileColor" content="#ffffff">
+   <meta name="theme-color" content="#ffffff">
    <script src="https://kit.fontawesome.com/29cab44a19.js"></script>
-   
+   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Pen+Script&family=Roboto+Mono:ital,wght@0,400;0,665;0,700;1,400&family=Square+Peg&display=swap');
+    </style>
 </head>
+<!-- 헤더 -->
 <body>
     <div id="header">
         <div class="container1">
@@ -17,7 +23,7 @@
                     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAzMDlfMjgg%2FMDAxNjE1MjY4MjM1NDI3.UPGULITVW-zQ7BqTcC6YZ7xSNCTpcEyKVPCMhH31YKQg.tBqXJeDQy8cMmA60AjJWVPAXNGlMlJFjO9BbH7LiCcIg.JPEG.vilip7%2F20210309_143658.jpg&type=sc960_832" alt="">
                 </div>
                 <div class="menu clearfix">
-                    <a href="family.html"><div class="menu-item">아빠
+                    <a href="/dad.html"><div class="menu-item">아빠
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     </a>
@@ -29,7 +35,7 @@
                     <a href="/sister.html"><div class="menu-item">누나
                         <i class="fa-solid fa-heart"></i>
                     </div></a>
-                 <a href="#"><div class="menu-item">진한
+                 <a href="/진한.html"><div class="menu-item">진한
                     <i class="fa-solid fa-heart"></i></a></div>
 
                  <a href="/index.html"><div class="menu-item">메인홈페이지</div></a>
@@ -41,7 +47,9 @@
         </div>
     </div>
 
+<!-- 헤더 -->
 
+<!-- 메인 -->
       
         <div style="overflow: hidden;">
           <Div class="container"> 
@@ -86,9 +94,9 @@
       </script>
       
       </div>
+<!-- 메인 -->
 
-
-
+<!-- 프로필 -->
 <div class="info">
     <img src="/프로필사진/까미프로필.jpg" style="width:30%" height="80%;">
     <h1 class="info_text"> 우리 까미 </h1>
@@ -105,22 +113,16 @@
 </div>
 
 
+<!-- 프로필 -->
 
 
 
 
-
-
-
-
-
-
-
-
+<!-- 프로필이미지 -->
 
         <div class="ff">
         <div class="box" style="background: #BDBDBD;">
-            <a href="family.html"><img class="profile" src="/프로필사진/아빠사진4.jpg"></a>
+            <a href="/dad.html"><img class="profile" src="/프로필사진/아빠사진4.jpg"></a>
         </div>
 
         <div class="box" style="background: #BDBDBD;">
@@ -132,10 +134,10 @@
         </div>
 
         <div class="box" style="background: #BDBDBD;">
-            <a href="#"><img class="profile" src="/쓰고있는사진/쓰는것.jpg"></a>
+            <a href="/진한.html"><img class="profile" src="/쓰고있는사진/쓰는것.jpg"></a>
         </div>
     </div>
 
-    </main>
+    <!-- 프로필이미지 -->
 </body>
 </html>
